Corrected some typo

--- a/MH4930 Notes/week 10.tex
+++ b/MH4930 Notes/week 10.tex
@@ -513,7 +513,7 @@ For more details (including its operation), refer to Example \ref{ex: group alge
     \begin{enumerate}
         \item (Trivial $G$-module). $\Z$ is a $G$-module with the trivial $G$-action, i.e. $g\cdot n = n$ for every $g\in G$ and $n\in \Z$. One shall note, however, that this does not mean $\alpha\cdot n = n$ for every $\alpha \in \Z G$, for example
         \[(1+g)\cdot n = 1\cdot n + g\cdot n = n+n = 2n\]
-        \item Let $A$ be a $G$-module. The fixed point submodule if 
+        \item Let $A$ be a $G$-module. The fixed point submodule is defined to be
         \[A^G = \sbr{a\in A : g\cdot a\ \forall g\in G}\leq A\]
         This is a submodule of $A$ where $G$ acts trivially.
         \item Let $V$ be a vector space over field $F$. Then $V$ is $\gl(V)$-module, where recall $\gl(V)$ is just the group fo linear transformation from $V$ to $V$. Furthermore, $V^{\gl(V)}= \sbr{\vec 0}$.
@@ -554,7 +554,7 @@ For more details (including its operation), refer to Example \ref{ex: group alge
     \end{enumerate}
 \end{pro}
 \begin{proof}
-    the proof is tedious and lengthy, thus it is left as a tutorial question.
+    The proof is tedious and lengthy, thus it is left as a tutorial question.
 \end{proof}
 
 \begin{defn} [Bar resolution / Standard Resolution]
