--- a/MH4930 Notes/main.tex
+++ b/MH4930 Notes/main.tex
@@ -136,7 +136,7 @@
 \section{Preface and Disclaimer}
 This note is written by me, a student who taken the course MH4930: Special Topics in Mathematics under Dr. Lim Kay Jin during academic year 25/26 at the School of Physical and Mathematical Sciences of Nanyang Technological University in Singapore. 
 
-I hereby disclaim that contents this note is only for my own use, and the note are not originally produced by me, except for the presentation of the written proofs. I do not take responsible for any grammatical and mathematical errors in the note. The note might or might not be complete, and, once completing the course, I will not update the note due to any reason.
+I hereby disclaim that the contents of this note are intended solely for my personal use and are not originally produced by me, except for the presentation of the written proofs. I do not take responsibility for any grammatical or mathematical errors in this note. The note may be incomplete, and once the course is finished, I will no longer update it for any reason.
 
 
 \newpage
@@ -151,7 +151,7 @@ I hereby disclaim that contents this note is only for my own use, and the note a
 \input{week 8}
 \input{week 9}
 \input{week 10}
-%\input{week 11}
+\input{week 11}
 %\input{week 12}
 %\input{week 12}
 
