--- a/MH4930 Notes/week 10.tex
+++ b/MH4930 Notes/week 10.tex
@@ -197,7 +197,7 @@
         \[0 = \varphi(0) = \varphi(na) = n\varphi(a)\]
         implying that $\varphi(a)=0$. Since $a$ is arbitrary, so $\varphi$ is the zero map, indicating that $\ext_\Z^0(A,\Z)$ is trivial. Next, we consider $\ext_\Z^1(A,\Z)$. Take 
         \[0 \to \Z \xto{\iota} \Q \xto{\pi} \Q/\Z \to 0\]
-        where $\pi$ is the canonical surjectiion, and $\iota$ is the inclusion map. The above is an injective resolution of $\Z$. Taking hom, we have 
+        where $\pi$ is the canonical surjection, and $\iota$ is the inclusion map. The above is an injective resolution of $\Z$. Taking hom, we have 
         \[0 \to \h_\Z(A,\Q)\to \h_\Z(A, \Q/\Z) \to 0 \to 0 \to \dots\]
         We claim that $\h_\Z(A,\Q)=0$. To see this, take $\varphi:A\to \Q$ be a group homomorphism and let $a\in A$ and $n\neq 0$ such that $n\cdot a = 0$. Note
         \[0 = \varphi(0) = \varphi(na) = n\varphi(a)\]
@@ -352,7 +352,7 @@
 \begin{proof}
     Let $P_\bullet \twoheadrightarrow A$ and $Q_\bullet \twoheadrightarrow C$ be projective resolutions of $A$ and $C$ respectively. By Horseshoe Lemma we have
     \[\begin{tikzcd}[sep=small]
-	{[sep=small]} && 0 && 0 && 0 && 0 \\
+	&& 0 && 0 && 0 && 0 \\
 	\\
 	\dots && {P_2} && {P_1} && {P_0} && A && 0 \\
 	\\
@@ -395,7 +395,7 @@
     \end{tikzcd}\]
     Taking $D\ten_R -$ we have
     \[\begin{tikzcd}[sep=small]
-	{[sep=small]} && 0 && 0 && 0 \\
+	&& 0 && 0 && 0 \\
 	\\
 	\dots && {D \ten_R P_2} && {D \ten_R P_1} & 0 & {D \ten_R P_0} && 0 \\
 	\\
@@ -462,7 +462,7 @@
     $[1. \implies 3.]$ Let $P_\bullet \twoheadrightarrow B$ be a projective resolution of $B$. Since $D$ is flat, from the LES
     \[\dots \to P_2 \to P_1 \to P_0 \to B \to 0 \to \dots\]
     it induces another LES
-    \[\dots \to D_R P_2 \to D \ten_R P_1 \to D \ten_R P_0 \to 0\]
+    \[\dots \to D \ten_R P_2 \to D \ten_R P_1 \to D \ten_R P_0 \to 0\]
     where the term $D\ten_R B$ is removed. Since this is a LES, thus all the homology group, i.e. the Tor groups, are trivial. This concludes the proof.
 \end{proof}
 
@@ -513,8 +513,8 @@ For more details (including its operation), refer to Example \ref{ex: group alge
     \begin{enumerate}
         \item (Trivial $G$-module). $\Z$ is a $G$-module with the trivial $G$-action, i.e. $g\cdot n = n$ for every $g\in G$ and $n\in \Z$. One shall note, however, that this does not mean $\alpha\cdot n = n$ for every $\alpha \in \Z G$, for example
         \[(1+g)\cdot n = 1\cdot n + g\cdot n = n+n = 2n\]
-        \item Let $A$ be a $G$-module. The fixed point submodule is defined to be
-        \[A^G = \sbr{a\in A : g\cdot a\ \forall g\in G}\leq A\]
+        \item Let $A$ be a $G$-module. The fixed point submodule of $A$ by $G$ is defined to be
+        \[A^G = \sbr{a\in A : ga = a \forall g\in G}\leq A\]
         This is a submodule of $A$ where $G$ acts trivially.
         \item Let $V$ be a vector space over field $F$. Then $V$ is $\gl(V)$-module, where recall $\gl(V)$ is just the group fo linear transformation from $V$ to $V$. Furthermore, $V^{\gl(V)}= \sbr{\vec 0}$.
         \item Let $K$ be a Galois extension of $F$ (for example $\Q$). Then $K$ is a $G$-module where $G = \gal(K/F)$. Also $K^G = F$ by the Galois correspondence.
@@ -537,14 +537,14 @@ For more details (including its operation), refer to Example \ref{ex: group alge
 \end{proof}
 
 \begin{pro}
-    Let $F_n := \bigotimes_{i=1}^{n+1} \Z G$. Then
+    Let $F_n := \bigotimes_{i=1}^{n+1} \Z G$ where tensor product is over $\Z$. Then
     \[\dots \to F_n \xto{d_n} F_{n-1} \xto{d_{n-1}} \dots F_1 \xto{d_1} F_0 \xto{\ep} \Z \to 0\]
     is a free resolution of $\Z$ as $\Z G$-module where
     \begin{enumerate}
         \item $F_n$ is $\Z G$-module defined by $g\cdot (g_0 \otimes g_1 \otimes \dots \otimes g_n) := (gg_0) \ten g_1 \ten \dots g_n$.
         \item $F_n$ is a free $\Z G$-module of rank $|G|^n$, i.e. $F_n \cong \bigoplus_{i=1}^{|G|^n} \Z G$ with a free basis
         \[\sbr{1\ten g_1 \dots \ten g_n:g_1, \dots, d_n\in G}\]
-        \item $d_0:F_0 \to \Z$ is defined by $d_0(g_0)=1$. For $d_1:F_1\to F_0$ where $d_1(g_0\ten g_1)= g_0(g_1-1)$. For $n\geq 2$, we define
+        \item $\ep =: d_0:F_0 \to \Z$ is defined by $d_0(g_0)=1$. For $d_1:F_1\to F_0$ where $d_1(g_0\ten g_1)= g_0(g_1-1)$. For $n\geq 2$, we define
         \begin{align*}
             d_n(g_0 \ten g_1 \ten \dots \ten g_n)=
             &(g_0g_1\ten g_2 \ten \dots \ten g_n)\\ 
@@ -575,5 +575,5 @@ For more details (including its operation), refer to Example \ref{ex: group alge
     Let $A$ be a $G$-module. The $n$-th group cohomology of $G$ with coefficient set $A$ is defined to be
     \[\ext_{\Z G}^n (\Z, A)\]
     where $\ext_{\Z G}^n (\Z, A)$ is the $n$-th cohomology group of the complex obatined from taking hom on the bar resolution of $\Z$:
-    \[0 \to \h_{\Z G}(F_0, A) \xto{d_1^*} \h_{\Z G}(F_1, A) \xto{d_2^8} \h_{\Z G}(F_2, A) \xto{d_3^*}\]
+    \[0 \to \h_{\Z G}(F_0, A) \xto{d_1^*} \h_{\Z G}(F_1, A) \xto{d_2^8} \h_{\Z G}(F_2, A) \xto{d_3^*}\dots\]
 \end{defn}
