--- a/MH4930 Notes/week 9.tex
+++ b/MH4930 Notes/week 9.tex
@@ -211,7 +211,7 @@
 \end{proof}
 
 \begin{thm}
-    The $n$-th cohomology group $\ext^n_R(V,W)$ is independent, up to isomorphism, of the choice of the projective residue of $V$.
+    The $n$-th cohomology group $\ext^n_R(V,W)$ is independent, up to isomorphism, of the choice of the projective resolution of $V$.
 \end{thm}
 \begin{proof}
     Let $P_\bullet \twoheadrightarrow V$ and $P'_\bullet \twoheadrightarrow V$ be two projective resolution of $V$. We thus have the following commutative diagram by Comporison Theorem:
