--- a/MH4930 Notes/main.tex
+++ b/MH4930 Notes/main.tex
@@ -71,6 +71,7 @@
 \newcommand{\aut}[1]{\operatorname{Aut}\br{#1}}
 \newcommand{\gl}{\operatorname{GL}}
 \newcommand{\gal}{\operatorname{Gal}}
+\newcommand{\res}{\operatorname{res}}
 
 \newcommand{\xto}[1]{\xrightarrow{#1}}
 \newcommand{\ot}{\leftarrow}
@@ -152,8 +153,8 @@ I hereby disclaim that the contents of this note are intended solely for my pers
 \input{week 9}
 \input{week 10}
 \input{week 11}
-%\input{week 12}
-%\input{week 12}
+\input{week 12}
+%\input{week 13}
 
 
 
