--- a/MH4930 Notes/week 11.tex
+++ b/MH4930 Notes/week 11.tex
@@ -181,7 +181,7 @@
 \end{proof}
 
 \begin{re}
-    Altogether, the previous few proposition implies that we have isomorphissm of complex 
+    Altogether, the previous few proposition implies that we have isomorphism of complex 
     \[\Phi: \h_{\Z G}(F_\bullet, A) \to C^\bullet (G,A)\]
     By previous result, we see that $H^n(G,A) := H^n(C^\bullet (G,A)) \cong \ext_{\Z G}(\Z, A)$
     where 
