--- a/MH4930 Notes/main.tex
+++ b/MH4930 Notes/main.tex
@@ -72,6 +72,9 @@
 \newcommand{\gl}{\operatorname{GL}}
 \newcommand{\gal}{\operatorname{Gal}}
 \newcommand{\res}{\operatorname{res}}
+\newcommand{\cores}{\operatorname{cores}}
+\newcommand{\der}{\operatorname{Der}}
+\newcommand{\inn}{\operatorname{Inn}}
 
 \newcommand{\xto}[1]{\xrightarrow{#1}}
 \newcommand{\ot}{\leftarrow}
@@ -154,7 +157,7 @@ I hereby disclaim that the contents of this note are intended solely for my pers
 \input{week 10}
 \input{week 11}
 \input{week 12}
-%\input{week 13}
+\input{week 13}
 
 
 
