--- a/MH4930 Notes/week 12.tex
+++ b/MH4930 Notes/week 12.tex
@@ -156,6 +156,10 @@
     The result follows
 \end{proof}
 
+
+\newpage
+\subsection{Inflation, Restriction, and Corestriction Homomorphisms}
+
 \begin{defn} [Compatible]
     Let $A$ and $A'$ be $G$ and $G'$-module respectively. A group homomorphism $\alpha:G'\to G$ is compatible with a (abelian) group homomorphism $f:A\to A'$ if 
     \[g' \cdot f(a) = f(\alpha(g') \cdot a)\]
