--- a/MH4930 Notes/week 11.tex
+++ b/MH4930 Notes/week 11.tex
@@ -222,8 +222,11 @@
     Simply apply the assumption on the LES in group cohomology. The isomorphism comes from the exactness.
 \end{proof}
 
+\newpage
+\subsection{Induced Module, }
+
 \begin{defn} [Induced module]
-    Let $H$ be a subgroup of $G$, then $\Z H$ is a subalgebra(subring) of $\Z G$. Let $A$ be an $H$-module. We define the induced $G$-module by
+    Let $H$ be a subgroup of $G$, then $\Z H$ is a subalgebra (subring) of $\Z G$. Let $A$ be an $H$-module. We define the induced $G$-module by
     \[M_H^G(A) := \h_{\Z H} (\Z G, A) = \sbr{\varphi: \Z G \to A: h\varphi(g) = \varphi(hg) \forall h\in H, \forall g\in G}\]
     where we consider $\Z G$ as the bimodule $_{\Z H} \Z G_{\Z G}$.
 \end{defn}
